--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,4 @@
-# SMARTCARGO-AIPA/pyproject.toml
-
-[tool.poetry]
-name = "smartcargo-aipa"
-version = "0.1.0"
-description = "Backend de SmartCargo AIPA con blindaje legal y lógica de IA."
-authors = ["Tu Nombre <tu@email.com>"]
-license = "Proprietary"
-readme = "README.md"
+# ... (Sección [tool.poetry] arriba)
 
 [tool.poetry.dependencies]
 python = "^3.11"
@@ -23,13 +15,7 @@ stripe = "^10.0.0"
 
 # Lógica de IA y procesamiento
 requests = "^2.32.3"
-Pillow = "^10.3.0"
+Pillow = "^10.3.0"   # <--- DEBE ESTAR UNA SOLA VEZ
 # tu-sdk-ia = "^X.Y.Z" # SDK de la IA
 
-[tool.poetry.group.dev.dependencies]
-# Para el desarrollo local
-python-dotenv = "^1.0.1"
-
-[build-system]
-requires = ["poetry-core", "setuptools>=61.0.0"]
-build-backend = "poetry.core.masonry.api"
+# ... (El resto del archivo)
