--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 Flask==3.0.3
 gunicorn==22.0.0
-SQLAlchemy==1.4.52
+SQLAlchemy 2.0.31
 psycopg[binary]  # ¡Debe estar aquí!
 Pillow==10.4.0
 requests==2.32.3
