--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
+setuptools==69.5.1
+wheel==0.43.0
 Flask==3.0.3
 gunicorn==22.0.0
-SQLAlchemy 2.0.31
-psycopg[binary]  # ¡Debe estar aquí!
+SQLAlchemy==2.0.31
+psycopg==3.1.19
+stripe==10.0.0
 Pillow==10.4.0
 requests==2.32.3
 python-dotenv==1.0.1
-setuptools==69.5.1
-wheel==0.43.0
-stripe==10.0.0
