--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,15 +9,15 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.12"
 flask = "^2.3.3"
-sqlalchemy = "^2.0.20"
-stripe = "^10.0"
+sqlalchemy = "^2.0.44"
+stripe = "^10.12.0"
 google-genai = "^0.1.0"
+gunicorn = "^21.2.0"
 
 [tool.poetry.group.dev.dependencies]
-# Dependencias de desarrollo opcionales
-pytest = "^7.4"
+pytest = "^7.4.4"
 black = "^24.3"
-isort = "^6.0"
+isort = "^6.1.0"
 
 [build-system]
 requires = ["poetry-core>=1.6.0"]
