--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,8 @@
-fastapi==0.103.0
-uvicorn==0.23.2
-psycopg2-binary==2.9.9
-python-dotenv==1.0.1
+fastapi==0.111.0
+uvicorn==0.30.0
+python-multipart==0.0.9
 stripe==10.0.0
-jinja2==3.1.2
+asyncpg==0.29.0
+pydantic==2.7.0
+pydantic-settings==2.2.1
 requests==2.32.3
-pydantic==2.3.0
-sqlalchemy==2.1.0
-python-multipart==0.0.6
-babel==2.13.1
