--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,9 @@
-fastapi==0.128.0
-uvicorn==0.40.0
-python-dotenv==1.2.1
-pillow==9.5.0
-pytesseract==0.3.11
-httpx==0.28.1
-openai==2.14.0
-stripe==14.1.0
-google-genai==1.56.0
-aiofiles==25.1.0
-click==8.3.1
-certifi==2025.11.12
-charset_normalizer==3.4.4
-idna==3.11
-urllib3==2.6.2
-typing-extensions==4.15.0
-anyio==4.12.0
-sniffio==1.3.1
+fastapi
+uvicorn
+stripe
+httpx
+python-multipart
+python-dotenv
+google-genai
+openai
+aiofiles
